# asset-allocation-contracts

./: .codedrift.yml  .env.template  .gitignore  DEPLOYMENT_SETUP.md  README.md
python/: README.md  pyproject.toml
python/asset_allocation_contracts/: __init__.py  ai_chat.py  backtest.py  broker_accounts.py  finance.py  government_signals.py  intraday.py  job_metadata.py  market_history.py  notifications.py  paths.py  portfolio.py  quiver_signals.py  ranking.py  regime.py  results.py  stock_screener.py  strategy.py  strategy_publication.py  symbol_enrichment.py  symbol_identity.py  trade_desk.py  ui_config.py
python/scripts/: contract_codegen.py  export_schemas.py
schemas/: acknowledge-broker-alert-request.schema.json  ai-chat-request.schema.json  ai-chat-stream-event.schema.json  auth-session-status.schema.json  backtest-claim-request.schema.json  backtest-closed-position-list.schema.json  backtest-complete-request.schema.json  backtest-data-quality-event-list.schema.json  backtest-fail-request.schema.json  backtest-lookup-request.schema.json  backtest-lookup-response.schema.json  backtest-policy-event-list.schema.json  backtest-reconcile-response.schema.json  backtest-rolling-metrics.schema.json  backtest-run-list.schema.json  backtest-run-record.schema.json  backtest-run-request.schema.json  backtest-run-response.schema.json  backtest-start-request.schema.json  backtest-stream-event.schema.json  backtest-summary.schema.json  backtest-timeseries.schema.json  backtest-trade-list.schema.json  broker-account-action-response.schema.json  broker-account-list.schema.json  (+174 more)
(+36 files in other folders)
